dist_man1_MANS=

if BUILD_REFNETD
  dist_man1_MANS+=refnetd.1
endif

if ENABLE_QT
  dist_man1_MANS+=refnet-qt.1
endif

if BUILD_REFNET_CLI
  dist_man1_MANS+=refnet-cli.1
endif

if BUILD_REFNET_TX
  dist_man1_MANS+=refnet-tx.1
endif

if ENABLE_WALLET
if BUILD_REFNET_WALLET
  dist_man1_MANS+=refnet-wallet.1
endif
endif
